# bgscoring

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality.yml
bgscoring/: database.py  main.py
bgscoring/auth/: base_config.py  hasher.py  jwt.py  manager.py  models.py  schemas.py  utils.py
bgscoring/configs/: app_config.py
bgscoring/entities/: enums.py  game.py  keyboard.py  user.py
bgscoring/entities/crud/: crud_cell.py  crud_game.py  crud_game_players.py  crud_game_result.py  crud_key.py  crud_keyboard.py  crud_user.py
bgscoring/entities/dals/: dal_cell.py  dal_game.py  dal_game_player.py  dal_game_result.py  dal_key.py  dal_keyboard.py  dal_user.py
bgscoring/entities/models/: model_cell.py  model_game.py  model_game_player.py  model_game_result.py  model_key.py  model_keyboard.py  model_user.py
bgscoring/entities/routers/: router_cell.py  router_game.py  router_game_players.py  router_game_result.py  router_key.py  router_keyboard.py  router_user.py
bgscoring/entities/schemas/: schemas_cell.py  schemas_game.py  schemas_game_player.py  schemas_game_result.py  schemas_key.py  schemas_keyboard.py  schemas_user.py
bgscoring/games/: models.py  router.py  schemas.py
compose/local/app/: Dockerfile  entrypoint  start
configs/: app_config.py
docker/: app.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Root.vue
migrations/: env.py
migrations/versions/: 1feec1e27566_initial.py  e5087cea39bf_add_games.py
src/: database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/games/: models.py  router.py  schemas.py
tests/: conftest.py  test_auth.py  test_games.py  test_main.py  test_ping.py
